Thu Sep 20 15:31:35 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalendar.c (gtk_calendar_init): Use the current
	day, as well as the current month and year.

Thu Sep 20 15:10:30 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdialog.c (gtk_dialog_init): Automatically set
	set dialogs to GTK_WIN_POS_CENTER_ON_PARENT. (#60554)
	
Thu Sep 20 18:00:56 2001  Kristian Rietveld  <kristian@planet.nl>

	* tests/testgtk.c (struct OptionMenuItem): get rid of it,

	(build_option_menu): add func argument, connect ::changed
	signal to option menu instead of connecting the ::activate
	signal to the menu items,

	(toplevel): get rid of RADIOMENUTOGGLED macro,

	(list_toggle_sel_mode), (clist_toggle_sel_mode),
	(ctree_toggle_line_style), (ctree_toggle_expander_style),
	(ctree_toggle_justify), (ctree_toggle_sel_mode),
	(progressbar_toggle_orientation), (progressbar_toggle_bar_style):
	use gtk_option_menu_get_history() instead of RADIOMENUTOGGLED,

	(notebook_type_changed): merged standard_notebook(),
	notabs_notebook(), scrollable_notebook() and borderless_notebook()
	into notebook_type_changed()

	(create_list), (create_ctree), (create_notebook),
	(create_progress_bar): changed OptionMenuItem arrays into
	gchar * arrays. Removed "Extended" item where used.

	Fixes bug #59885

2001-09-20  Sven Neumann  <sven@gimp.org>

	* configure.in
	* gdk/Makefile.am
	* gtk/Makefile.am
	* gtk/gtkselection.c
	* gtk/gtktreeview.c
	* gtk/gtkwindow.c: removed remaining traces of nanox GDK backend.

Thu Sep 20 11:19:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.c (gdk_pango_layout_line_get_clip_region): Add
	a missing pango_layout_iter_free ().

Thu Sep 20 11:03:51 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkobject.c gtk/gtklist.c gtk/gtkplug.c gtk/gtksocket.c
	gtk/gtktreemodelsort.c gtk/gtktreeview.c: Small warning cleanups.

	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_get_group): Change
	the function definition so we don't accidentally rely on